ra_bmp, ra_ps, and ra_rgbe programs.  Also updated fast tone-mapping
library to handle spectral HSR inputs at the same time.  HSR
input handling was added in a similar fashion to pcond and pvalue
for convenience.

Added handling of hyperspectral images to normtiff, a handy program
for quickly tone-mapping Radiance RGBE, XYZE, and now hyperspectral
pictures, as well as IEEE float or LogLuv TIFFs.

Added handling of hyperspectral pictures to pextrem, though
results are still reported in RGB.

Added accurate conversion of hyperspectral pictures to ra_xyze.

Added hyperspectral picture conversion to ra_tiff, with accurate
color when targeting 16-bit/comp., LogLuv, and float utput,
and the approximate method for 24-bit RGB.

Taoning added genssky -L option to specify global and diffuse
illuminance values for output calibration.

Created C++ class for rcontrib and example tool rxcontrib, which
is an optional compile in the src/rt directory.  The output
model is more general in some respects and the operations more
efficient, but standard output is not supported, nor is ASCII
results data.

Added strnstr.c compatibility module in ray/src/common, since
it isn't present on Linux derivatives.

Added WGMDfunc material type with programmable roughness and
separate modifier paths for the different components.

Added gensurf -i option at the request of Peter Apian-Bennewitz
to reverse surface normals, mostly for data input, when it is
a bit more difficult to adjust.

Added rad -N option to rholo call for multiprocessing when
mkillum and/or mkpmap are involved in octree prep.

Added ability of gendaymtx to read EPW as well as WEA files.
When EPW input is provided, the 3-hour average dew point is
used to compute a more accurate precipitable water content
value.  It currently does not use these data directly from
the EPW input, relying instead on a dew-point-to-W calculation.
This follows the request and recommendations of David G-M.